--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@tanstack/react-query-devtools": "^5.84.1",
     "@types/mdx": "^2.0.13",
     "@vercel/og": "^0.6.8",
+    "@xmtp/browser-sdk": "^5.3.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
