--- a/package.json
+++ b/package.json
@@ -61,9 +61,9 @@
     "ethereum-identity-kit": "^0.2.52",
     "ethers": "^6.15.0",
     "family": "^0.1.3",
-    "fumadocs-core": "^15.7.7",
-    "fumadocs-mdx": "^11.8.2",
-    "fumadocs-ui": "^15.7.7",
+    "fumadocs-core": "^16.4.6",
+    "fumadocs-mdx": "^11.10.0",
+    "fumadocs-ui": "^16.4.6",
     "iron-session": "^8.0.4",
     "jotai": "^2.12.5",
     "lexical": "^0.32.1",
@@ -76,9 +76,9 @@
     "pino-pretty": "^13.1.1",
     "porto": "^0.2.6",
     "postcss": "^8.5.6",
-    "react": "^19.0.0-rc.1",
+    "react": "^19.2.0",
     "react-canvas-confetti": "^2.0.7",
-    "react-dom": "^19.0.0-rc.1",
+    "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
