--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "allowUmdGlobalAccess": true,
     "paths": {
       "~/*": ["./src/*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "fumadocs-mdx:collections/*": [".source/*"]
     },
     "plugins": [
       {
@@ -26,6 +27,7 @@
     "target": "ES2020"
   },
   "include": [
+    ".source/**/*",
     "next-env.d.ts",
     ".eslintrc.cjs",
     "src/*.mjs",
