--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "paths": {
       "~/*": ["./src/*"],
       "@/*": ["./*"],
-      "fumadocs-mdx:collections/*": ["./.source/*"]
+      "collections/*": ["./.source/*"]
     },
     "plugins": [
       {
