--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -11,13 +15,22 @@
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "types": ["react", "react-dom"],
+    "jsx": "react-jsx",
+    "types": [
+      "react",
+      "react-dom"
+    ],
     "allowUmdGlobalAccess": true,
     "paths": {
-      "~/*": ["./src/*"],
-      "@/*": ["./*"],
-      "collections/*": ["./.source/*"]
+      "~/*": [
+        "./src/*"
+      ],
+      "@/*": [
+        "./*"
+      ],
+      "collections/*": [
+        "./.source/*"
+      ]
     },
     "plugins": [
       {
@@ -48,7 +61,8 @@
     "src/components/**/*.tsx",
     "src/hooks/*.ts",
     "src/hooks/**/*.ts",
-    "src/proxy.ts"
+    "src/proxy.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "src/pages_old/**.ts",
