--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.10.0",
   "private": true,
   "engines": {
-    "node": ">=22 <23"
+    "node": ">=22"
   },
   "scripts": {
     "build": "bunx --bun next build --webpack",
