--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,6 +42,7 @@
   "include": [
     "./.source/**/*",
     "next-env.d.ts",
+    "middleware.ts",
     ".eslintrc.cjs",
     "src/*.mjs",
     "src/app/*.ts",
