rename middleware.ts to proxy.ts for next.js 16 compatibility

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,7 +42,7 @@
   "include": [
     "./.source/**/*",
     "next-env.d.ts",
-    "middleware.ts",
+    "proxy.ts",
     ".eslintrc.cjs",
     "src/*.mjs",
     "src/app/*.ts",
